app/assets/stylesheets/layout.css.scss
body {background-color: $gleuch-white; overflow-x: hidden;}


// HEADER
#header { position: fixed; top: 0; left: 0; right: 0; z-index: 888888; background-color: $gleuch-white; border-top: 10px solid $gleuch-logo; padding: 0 $gleuch-lg-frame-padding; min-height: 90px;
//  #notices {
////    position: absolute; top: 0px; left: $gleuch-lg-frame-padding; right: $gleuch-lg-frame-padding; padding: 0 200px;
//    margin-top: 85px; margin-bottom: 20px;
//    .flash {background-color: rgba($gleuch-text-grey,.12); text-align: center; padding: 8px 20px; font-size: 1.6rem;}
//  }
  #brand {margin-top: 30px;
    a {display: block; width: 105px; height: 40px; text-indent:-999px; background: image-url('logo.png') center center no-repeat; background-size: 100% 100%; overflow: hidden; -webkit-transition: opacity .2s ease-out, -webkit-filter .2s ease-out; -moz-transition: opacity .2s ease-out, -moz-filter .2s ease-out; -ms-transition: opacity .2s ease-out, -ms-filter .2s ease-out; transition: opacity .2s ease-out, filter .2s ease-out;
      @include hidpi(1.5) { background-image: image-url('logo@2x.png');}
      
      html.can-css-mask & {background-image: none; background-color: $gleuch-logo;mask: image-url('logo.png') center center / cover; -webkit-mask: image-url('logo.png') center center / cover; -ms-mask: image-url('logo.png') center center / cover;
        @include hidpi(1.5) {background-image: none; mask-image: image-url('logo@2x.png'); -webkit-mask-image: image-url('logo@2x.png'); -ms-mask-image: image-url('logo@2x.png');}
      }
      &:hover {opacity: .8; -webkit-filter: grayscale(1); -moz-filter: grayscale(1); -ms-filter: grayscale(1); filter: grayscale(1);}
    }
  }
  #breadcrumbs {position: absolute; bottom: 20px; left: $gleuch-lg-frame-padding; @include transition(left .12s ease-out);
    body.nav-open & {left: $gleuch-lg-frame-padding + 125px + 15px; @include transition(left .2s .1s ease-out);}
  }
  #menu-icon {float: left; width: 15px; overflow: hidden; @include transition(opacity .1s ease-out);
    .menu-bar {display: block; background-color: $gleuch-mid-black; height: 3px; width: 15px; margin: 0 0 2px 0; line-height: 0; 
      -webkit-transition: background-color .2s ease-out, opacity .2s .6s ease-out, width .2s .6s ease-out, -webkit-transform .2s .5s ease-out, margin .2s .3s ease-out;
      -moz-transition: background-color .2s ease-out, opacity .2s .6s ease-out, width .2s .6s ease-out, -moz-transform .2s .5s ease-out, margin .2s .3s ease-out;
      -ms-transition: background-color .2s ease-out, opacity .2s .6s ease-out, width .2s .6s ease-out, -ms-transform .2s .5s ease-out, margin .2s .3s ease-out;
      transition: background-color .2s ease-out, opacity .2s .6s ease-out, width .2s .6s ease-out, transform .2s .5s ease-out, margin .2s .3s ease-out;
      &:nth-child(1) {@include transform-origin(top left);}
      &:nth-child(3) {@include transform-origin(bottom left);}
    }
    &.hover {opacity: .5; cursor: pointer;}
    body.nav-open & {
      .menu-bar:nth-child(2) {opacity: 0; width: 0; @include transition(background-color .2s ease-out, opacity .2s .3s ease-out, width .2s .3s ease-out);}
      .menu-bar:nth-child(1), .menu-bar:nth-child(3) {opacity: 1; margin-left: 3px;}
      .menu-bar:nth-child(3) {@include transform(rotate(-45deg));}
      .menu-bar:nth-child(1) {@include transform(rotate(45deg));}
    }
  }
  .divider {float: left; margin: 0 15px; width: 1px; height: 15px; overflow: hidden; background-color: rgba($gleuch-black,.2); vertical-align: top;}
  a.close-menu {text-indent: -150px; pointer-events: none; opacity: 0; float: left; font-size: 1.8rem; color: $gleuch-text-grey; text-transform: lowercase; line-height: 15px;
    &:focus, &.hover {text-decoration: none; color: $gleuch-mid-black; cursor: pointer;}
    body.nav-open & {text-indent: 0px; opacity: 1; pointer-events: visible;}
  }
  ul {float: left;  text-indent: 0; opacity: 1; pointer-events: visible; margin: 0; padding: 0;
    li {float: left; display: inline-block;
      &, a {color: $gleuch-text-grey; font-size: 1.8rem; line-height: 15px; text-transform: lowercase;  @include transition(color .1s ease-out);}
      a:focus, a:hover {text-decoration: none; color: $gleuch-mid-black;}
      &:before {content: ""; display: inline-block; margin: 0 4px 0 8px; width: 10px; height: 9px; background: image-url('breadcrumb-arrow.png') center center no-repeat;
        @include hidpi(1.5) {background-image: image-url('breadcrumb-arrow@2x.png'); background-size: 10px 9px;}
      }
      &:first-child:before {display: none;}
    }
    body.nav-open & {text-indent: -150px; opacity: 0; pointer-events: none;}
  }
  a.close-menu, ul {@include transition(color .1s ease-out, text-indent .3s ease-out, opacity .1s ease-out);
    body.nav-open & {@include transition(color .1s ease-out, text-indent .3s .2s ease-out, opacity .1s .3s ease-out);}
  }
}

// NAV PULLOUT
#nav-pullout { position: fixed; top: -15px; left: -200px; bottom: -15px; padding: 15px 0; z-index: 999999; width: 200px; background-color: $gleuch-grey-bg; box-shadow: inset 0 4px 18px rgba($gleuch-black, 0.12); @include transition(left .3s ease-out);
  body.nav-open & {left: 0;}
  #menu-items {padding: 90px 15px 50px 15px;
    li { border-top: 1px solid rgba($gleuch-black,.05); padding: 10px 15px;
      a {display: block; color: $gleuch-text-grey; text-transform: lowercase; font-size: 1.8rem; text-indent: -50px; opacity: 0; @include transition(text-indent .2s .1s ease-out, opacity .3s .1s ease-out);
        &:hover, &:focus {color: $gleuch-logo;}
        body.nav-open & {text-indent: 0; opacity: 1;}
      }
      &:first-child {border-top: none;}
      body.nav-open & {
        &:nth-child(1) a {@include transition-delay(.3s);}
        &:nth-child(2) a {@include transition-delay(.4s);}
        &:nth-child(3) a {@include transition-delay(.5s);}
        &:nth-child(4) a {@include transition-delay(.6s);}
        &:nth-child(5) a {@include transition-delay(.7s);}
        &:nth-child(6) a {@include transition-delay(.8s);}
        &:nth-child(7) a {@include transition-delay(.9s);}
      }
    }
  }
  #nav-footer { position: absolute; bottom: 30px; left: 15px; right: 15px;
    ul {display: block; margin: 0; padding: 0;
      li {display: inline-block;
        a {color: $gleuch-text-grey; font-size: 1.6rem;
          &:hover, &:focus {color: $gleuch-logo;}
          span {display: none;}
        }
      }
    }
  }
}


// CONTENT CONTAINER
#wrapper {margin-top: 90px; overflow-x: hidden;}
#upper-container {padding-left: 0; padding-right: 0;}
#container {padding: 0 $gleuch-lg-frame-padding; background-color: $gleuch-white;
  #content {position: relative; background-color: $gleuch-grey-bg; padding-left: 0; padding-right: 0; left: 0; @include transition(left .3s ease-out);
    &:after {content: ''; position: fixed; z-index: 777777; display: block; top: 0; left: 0; height: 100%; max-height: 0; background: image-url('bg/pixel-bg.png') 0 0 repeat; opacity: 0; @include transition(opacity .3s ease-out);}
    body.nav-open & {left: $gleuch-lg-frame-padding;
      &:after {max-height: 100%; right: 0; bottom: 0; opacity: .5;}
    }
  }
}


// TABLET RESPONSIVE
@media ($tablet-max-size) {
  #header, #container {padding: 0 $gleuch-sm-frame-padding;}
  #header {
    #breadcrumbs {left: $gleuch-sm-frame-padding;
      body.nav-open & {left: $gleuch-sm-frame-padding + 170px + 15px;}
    }
  }
  #container {
    #content {
      body.nav-open & {left: $gleuch-sm-frame-padding;}
    }
  }
}

// MOBILE RESPONSIVE
@media ($mobile-max-size) {
  #header, #container {padding: 0 $gleuch-xs-frame-padding;}
  #header { border-top-width: 5px; min-height: 55px;
    #brand { margin-top: 10px;
      a {width: 75px; height: 28px;}
    }
    #breadcrumbs {left: $gleuch-xs-frame-padding; bottom: 15px;
      body.nav-open & {left: $gleuch-xs-frame-padding;}
      .divider {margin: 0 10px;}
      ul {
        li {display: none;
          &:first-child {display: inline-block;
            &:before {display: none;}
          }
          &, a {font-size: 1.6rem;}
        }
      }
    }
    a.close-menu, ul {height: 17px; overflow-x: hidden; @include transition(color .1s ease-out, text-indent .3s ease-out, opacity .1s ease-out);
      body.nav-open & {@include transition(color .1s ease-out, text-indent .3s .2s ease-out, opacity .1s .3s ease-out);}
    }
  }
  // NAV PULLOUT
  #nav-pullout { position: fixed; top: 55px; left: -$gleuch-xs-frame-padding; right: -$gleuch-xs-frame-padding; bottom: 100%; width: auto; overflow: scroll; max-height: 0; padding: 0 (2 * $gleuch-xs-frame-padding); max-width: none; background-color: rgba($gleuch-grey-bg,.9); box-shadow: inset 0 0 18px rgba($gleuch-black, 0.12); @include transition(bottom .3s ease-out, max-height .3s ease-out);
    body.nav-open & {bottom: 0; max-height: 100%; left: -$gleuch-xs-frame-padding;}
    #menu-items {padding: 15px 0;
      li {display: block; border-top: 1px solid rgba($gleuch-black,.05); text-align: center; opacity: 0; @include transition(opacity .3s .1s ease-out);
        body.nav-open & {opacity: 1;}
        &:first-child {border-top: none;}
        a {text-transform: uppercase; display: block; font-size: 1.8rem; line-height: 1.0em; padding: 12px 0; color: $gleuch-text-grey; font-weight: 600;
          &:hover, &:focus {color: $gleuch-logo;}
        }
        &:nth-child(1) {@include transition-delay(.2s);}
        &:nth-child(2) {@include transition-delay(.3s);}
        &:nth-child(3) {@include transition-delay(.4s);}
        &:nth-child(4) {@include transition-delay(.5s);}
        &:nth-child(5) {@include transition-delay(.6s);}
        &:nth-child(6) {@include transition-delay(.7s);}
        &:nth-child(7) {@include transition-delay(.8s);}
      }
    }
    #nav-footer {position: absolute; bottom: 30px; left: 15px; right: 15px; text-align: center; opacity: 0; @include transition(opacity .3s ease-out);
      body.nav-open & {opacity: 1; @include transition-delay(.3s);}
      ul {display: inline-block; margin: 0 auto;
        li {display: inline-block;
          a {font-size: 2.4rem;}
        }
      }
    }
  }
  #wrapper {margin-top: 55px;}
  #container {
    #content {
      body.nav-open & {left: auto;}
    }
  }
  footer#mobile-footer {margin: 0 $gleuch-xs-frame-padding; padding: $gleuch-xs-frame-padding; background-color: $gleuch-grey-bg;
    .container-fluid {margin: 0; padding: $gleuch-xs-frame-padding 0 0 0; border-top: 1px solid rgba($gleuch-black,.05);}
    p {padding: 0; margin: 0; font-size: 0.9rem; line-height: 1.25em; text-align: left; color: $gleuch-text-grey;
      a {color: $gleuch-text-grey;
        &:hover, &:focus {color: $gleuch-logo;}
      }
    }
    ul {margin: 0; padding: 0 0 0 15px;
      li {display: inline-block; padding: 0; margin: 0 -3px;
        &[data-platform='githublogo'] {margin: 0 -5px;}
        a {font-size: 1.0em; color: $gleuch-text-grey;
          &:hover, &:focus {color: $gleuch-logo;}
          span {display: none;}
        }
      }
    }
  }
}

